generated/manifests/prod-axon/dash/Deployment-dash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: dash
    app.kubernetes.io/name: dash
  name: dash
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: dash
      app.kubernetes.io/name: dash
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: dash
        app.kubernetes.io/name: dash
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: dash.json64.dev
            - name: HOMEPAGE_VAR_LIDARR_KEY
              valueFrom:
                secretKeyRef:
                  key: lidarr
                  name: media-arr-api-keys
            - name: HOMEPAGE_VAR_RADARR_KEY
              valueFrom:
                secretKeyRef:
                  key: radarr
                  name: media-arr-api-keys
            - name: HOMEPAGE_VAR_SABNZBD_KEY
              valueFrom:
                secretKeyRef:
                  key: sabnzbd
                  name: media-arr-api-keys
            - name: HOMEPAGE_VAR_SONARR_KEY
              valueFrom:
                secretKeyRef:
                  key: sonarr
                  name: media-arr-api-keys
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: TZ
              value: America/Los_Angeles
          image: ghcr.io/gethomepage/homepage@sha256:643bd0be730d40f69d58028a55d1a896739333e8815786df42bc97f109ecbe61
          name: main
          volumeMounts:
            - mountPath: /app/config/bookmarks.yaml
              name: config
              readOnly: true
              subPath: bookmarks.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: config
              readOnly: true
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: config
              readOnly: true
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: config
              readOnly: true
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: config
              readOnly: true
              subPath: widgets.yaml
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: dash
      volumes:
        - configMap:
            name: dash-config
          name: config
