generated/manifests/prod-axon/dash/SecurityPolicy-dash-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: dash-oidc
  namespace: media
spec:
  oidc:
    clientID: dash
    clientSecret:
      name: dash-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/dash
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: dash
