generated/manifests/prod-axon/dash/CiliumNetworkPolicy-allow-api-egress-dash.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-api-egress-dash
  namespace: media
spec:
  description: Allow dash to reach the in-namespace media APIs it surfaces.
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: "8686"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: whisparr
      toPorts:
        - ports:
            - port: "6969"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dash
