generated/manifests/prod-axon/dash/CiliumNetworkPolicy-allow-apiserver-egress-dash.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apiserver-egress-dash
  namespace: media
spec:
  description: Allow dash to reach the kube-apiserver for cluster resource discovery.
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dash
